# vibe-sync

./: BUILD_STATUS.md  CMakeLists.txt  DEBUG_FEATURES.md  Makefile  README.md  build-project.zsh  build.sh
docs/: README.md
docs/debug/: overview.md
docs/user/: music-player.md  presets.md  quick-start.md  text-overlays.md  video-recording.md  visualizations.md
src/: main.cpp
src/core/: DebugManager.h  ErrorManager.cpp  ErrorManager.h  Logger.cpp  Logger.h  PathUtils.h  PerformanceManager.cpp  PerformanceManager.h  PluginManager.cpp  PluginManager.h  StringUtils.h  TextFormatter.h
src/data/: SettingsManager.cpp  SettingsManager.h
src/engine/: AudioEngine.cpp  AudioEngine.h  PlaylistManager.cpp  PlaylistManager.h  PresetManager.cpp  PresetManager.h  TextEngine.cpp  TextEngine.h  VideoRecorder.cpp  VideoRecorder.h  VizEngine.cpp  VizEngine.h
src/ui/: MainWindow.cpp  MainWindow.h
src/ui/dialogs/: SettingsDialog.h
src/ui/menus/: AppMenuBar.cpp  AppMenuBar.h
src/ui/widgets/: DebugConsole.h  PlaylistWidget.h  VisualizerView.cpp  VisualizerView.h
